<resources>
    <string name="app_name">Remind Me</string>
    <string name="msg_hint">Write Reminder i.e Take Lunch</string>
    <string name="titleBar">List Of Reminder</string>
    <string name="titleAbout">About Us</string>
    <string name="about">About</string>
    <string name="name">Vivek Chavda</string>
    <string name="email">Vchavda464@rku.ac.in</string>
    <string name="college">RK University</string>
    <string name="desc">RemindeMe is Reminder App which is used to set reminder for various events of day-to-day life so you can\'t miss any event.</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="save">Save</string>
    <string name="noRemider">No Reminders</string>
    <string name="RemiderSet">Reminder Set</string>
    <string name="Remider">Reminder</string>
    <string name="RemiderDelete">Reminder Deleted</string>
    <string name="nullAlert">Time And Date Should not be NULL</string>
    <string name="save_every_moments">Save Every Moments...</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="delete_reminder_confirm">Do you want to delete this reminder?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="developer">Vivek Chavda</string>
    <string name="headEmail">Email</string>
    <string name="org">Organization</string>
    <string name="note">About RemindMe</string>
    <string name="version">Version</string>
    <string name="n_version">1.0</string>

</resources>