<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:typeface="serif"
        android:background="@color/themecolor"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/delete_reminder">

    </TextView>


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/delete_reminder_confirm"
        android:textSize="20dp"
        android:typeface="serif" />

   <LinearLayout
       android:layout_width="match_parent"
       android:padding="10dp"
       android:layout_height="match_parent">
    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:backgroundTint="@color/themecolor"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:typeface="serif" />
       <Button
           android:id="@+id/no"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/no"
           android:backgroundTint="@color/themecolor"
           android:layout_weight="1"
           android:textAllCaps="false"
           android:textColor="#ffffff"
           android:textSize="24dp"
           android:typeface="serif" />
   </LinearLayout>

</LinearLayout>