<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:typeface="serif"

        android:background="@color/themecolor"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/set_reminder"
        android:gravity="center_horizontal">

    </TextView>


    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/themecolor"
        android:textColor="#ffffff"
        android:gravity="center"
        android:hint="@string/choose_date_and_time"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:textColorHint="#ffffff"
        android:typeface="serif" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:focusedByDefault="false"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:maxLength="35"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/AppTheme"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/msg_hint"
        android:gravity="center"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/themecolor"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:elevation="50dp"
        android:textSize="24dp"
        android:typeface="serif" />

</LinearLayout>