<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".AboutScreen"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        tools:context=".About_as">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/ic_about_wave"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="131dp"
                    android:layout_height="168dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="195dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="195dp"
                    android:layout_marginTop="50dp"
                    android:elevation="30dp"


                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.681"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/textView_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/developer"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"

                    android:textStyle="bold"
                    android:typeface="serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.48"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.404" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:clipToPadding="false"

                    android:padding="10dp">

                    <ImageView

                        style="@style/abt_icon"
                        app:srcCompat="@drawable/ic_baseline_email_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/text_email"
                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/headEmail"

                            />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:clipToPadding="false"
                    android:layout_marginTop="20dp"
                    android:padding="10dp">

                    <ImageView

                        style="@style/abt_icon"
                        app:srcCompat="@drawable/ic_baseline_school_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/org" />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/college" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:clipToPadding="false"
                    android:layout_marginTop="20dp"
                    android:padding="10dp">

                    <ImageView
                        style="@style/abt_icon"
                        app:srcCompat="@drawable/ic_baseline_notes_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/note" />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/desc" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:clipToPadding="false"
                    android:layout_marginTop="20dp"
                    android:padding="10dp">

                    <ImageView
                        style="@style/abt_icon"
                        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/version" />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/n_version" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>